# cdnalizer

./: .gitmodules  CMakeLists.txt  CTestConfig.cmake  DEVELOPER.md  DEVELOPMENT.md  LICENSE.txt  README.md  README.mk  TODO.mkd  developer_manual.md
apache/: CMakeLists.txt  TODO.md  mod_cdnalize.c
apache/cdnalizer/: Makefile  mod_cdnalizer.c  mod_cdnalizer.la  mod_cdnalizer.lo  modules.mk  tags
apache/cdnalizer/.libs/: mod_cdnalizer.la  mod_cdnalizer.lai
apache/release-1.3/.svn/: wc.db
binaries/centos-6/: cdnalizer.conf  install.sh
binaries/ubuntu-13.10/: cdnalizer-0.1-Linux.deb  install.sh  mod_cdnalizer.load
blog/: 2017-04-25-introduction.mkd  2017-04-25-needs-profiling.mkd  2017-04-26-changing-from-spirit-to-ragel.mkd  2017-04-27-css-in-ragel.mkd  2017-04-30-css-with-actions.mkd  2017-05-06-JS-state-machine.mkd  2017-05-12-too-much-memory.mkd  bucket-brigade.dot
cmake/: FindApache.cmake  get_bandit.cmake  package-deb.cmake  package-rpm.cmake  package-yum.cmake  package.cmake
dev-tools/: debug-apache.sh
dev-tools/apache/: apache2.conf
dev-tools/apache/doc-root/: index.html
docker/: build-ubuntu.docker  setup-build-machine.sh
docker/apache-cdash/: Dockerfile  apache-cdash.conf  config.local.php  run.sh
docker/build-centos/: Dockerfile
docker/build-fedora/: Dockerfile
docker/build-ubuntu-precise/: Dockerfile
docker/build-ubuntu-trusty/: Dockerfile
docker/postgres/: Dockerfile
docker/postgres-cdash/: Dockerfile  run.sh  setup.sql
docker/postgres-init/: Dockerfile
docker/shared/: build-old.sh  build.sh
include/apr-1.3.9/arch/unix/: apr_private.h
src/: CMakeLists.txt  Config.cpp  Config.hpp  Parser.cpp  Parser.hpp  Rewriter.cpp  Rewriter.hpp  Rewriter_impl.hpp  Rewriter_impl_old.hpp  TestRewriter.cpp  c_wrapper.cpp  c_wrapper.hpp  find_attrib_name.dot  find_attrib_name.rl  find_attrib_value.dot  find_attrib_value.rl  find_tag.dot  find_tag.rl  pair.hpp  path.hpp  pathUtils.hpp  test_config.cpp  test_rewriteCSS.cpp  test_rewriteHTML.cpp  test_rewriteHTML_string.cpp  utils.hpp
src/apache/: AbstractBlockIterator.hpp  BucketEvent.hpp  BucketWrapper.hpp  CMakeLists.txt  config.cpp  config.hpp  contentTypes.hpp  filter.cpp  filter.hpp  iterator.hpp  iterator.hpp.gch  mod_cdnalizer.cpp  mod_cdnalizer.hpp  test_block_iterator.cpp  utils.hpp
src/parser/: .css.machine.rl.swp  CMakeLists.txt  css.hpp  css.hpp.rl  css.machine.rl  end_script.hpp.rl  end_script.machine.rl  html.hpp.rl  html.machine.rl  index.html  index.html.expected  js.common.rl  js.in.dq.machine.rl  js.in.sq.machine.rl  js.machine.rl  js.quoted.machine.rl  path.hpp.rl  path.machine.rl  test_html.cpp
src/standalone/: CMakeLists.txt  main.cpp
src/stream/: CMakeLists.txt  iterator.hpp  stream.cpp  stream.hpp  test_iterator.cpp
